# indy-vdr

./: .gitignore  README.md
libindy_vdr/: Cargo.toml
libindy_vdr/include/: libindy_vdr.h
libindy_vdr/src/: lib.rs
libindy_vdr/src/ffi/: did.rs  ledger.rs  mod.rs  wallet.rs
libindy_vdr/src/ledger/: constants.rs  mod.rs  request_builder.rs
libindy_vdr/src/ledger/requests/: auction.rs  handle.rs  mod.rs  rich_schema.rs  schema.rs
libindy_vdr/src/tools/: mod.rs
libindy_vdr/src/tools/did/: constants.rs  key.rs  mod.rs  seed.rs
libindy_vdr/src/tools/wallet/: credentials.rs  libindy_backup_reader.rs  mod.rs  uri.rs  wallet_binding.rs
libindy_vdr/src/tools/wallet copy/: backup.rs  libindy_backup_reader.rs  wallet_binding.rs  wallet_config.rs
libindy_vdr/src/utils/: clierror.rs  environment.rs  futures.rs  mod.rs  term.rs
libindy_vdr/tests/: rich_schema.rs
wrappers/golang/: go.mod  go.sum
wrappers/golang/cmd/demo/: demo.go  domain_transactions_genesis.json  gateway.go  pool_transactions_genesis.json  pool_transactions_genesis_flytest.json
wrappers/golang/identifiers/: did.go  did_test.go
wrappers/golang/vdr/: context.go  gatewayservice.go  indy_vdr.go  libindy_vdr.h  requests.go  rich_schema.go  writes.go
